# middleware/validate.js
@@ -1,5 +1,5 @@
 const validator = require('/validator');
 
-
+//need to add vaildation for each type of data that is stored, inventory items, accounts, reviews and orders
 
 module.exports = {};
